# fw-nrfconnect-nrf

./: CODEOWNERS  west.yml
applications/asset_tracker/: prj.conf  prj_thingy91_nrf9160ns.conf
applications/asset_tracker/src/: main.c
applications/asset_tracker_v2/: CMakeLists.txt  Kconfig  README.rst  overlay-aws.conf  overlay-azure.conf  overlay-debug.conf  overlay-full_modem_fota.conf  overlay-lwm2m.conf  overlay-pgps.conf  prj.conf  prj_nrf9160dk_nrf9160ns.conf  prj_thingy91_nrf9160ns.conf  sample.yaml
applications/asset_tracker_v2/doc/: app_behavior.rst  asset_tracker_v2_description.rst  data_module.rst  ui_module.rst
applications/asset_tracker_v2/src/: main.c
applications/asset_tracker_v2/src/cloud/: CMakeLists.txt  Kconfig  Kconfig.lwm2m_integration  avsystem_integration.c  aws_iot_integration.c  azure_iot_hub_integration.c  cloud_wrapper.h  coap_generic_integration..c  lwm2m_integration.c  nrf_cloud_integration.c
applications/asset_tracker_v2/src/codec/: CMakeLists.txt  Kconfig  lwm2m_codec.c  lwm2m_codec.h
applications/asset_tracker_v2/src/events/: CMakeLists.txt  app_module_event.c  app_module_event.h  cloud_module_event.c  cloud_module_event.h  data_module_event.c  data_module_event.h  debug_module_event.c  debug_module_event.h  gnss_module_event.c  gnss_module_event.h  modem_module_event.c  modem_module_event.h  sensor_module_event.c  sensor_module_event.h  ui_module_event.c  ui_module_event.h
applications/asset_tracker_v2/src/ext_sensors/: ext_sensors.h
applications/asset_tracker_v2/tests/application_module/: CMakeLists.txt  testcase.yaml
applications/asset_tracker_v2/tests/application_module/src/: application_module_test.c
applications/matter_weather_station/src/: app_task.cpp
applications/nrf5340_audio/src/: main.c
applications/serial_lte_modem/src/: main.c
applications/zbus-poc/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
applications/zbus-poc/src/: main.c
doc/: CMakeLists.txt
doc/nrf/: known_issues.rst  links.txt
doc/nrf/releases/: release-notes-2.0.0.rst  release-notes-changelog.rst
doc/nrf/releases_and_maturity/: known_issues.rst
include/: qos.h
include/modem/: location.h  pdn.h
include/net/: aws_fota.h  aws_iot.h  azure_fota.h  azure_iot_hub.h  lwm2m_client_utils.h  lwm2m_client_utils_location.h  nrf_cloud.h  nrf_cloud_agps.h  nrf_cloud_coap.h  nrf_cloud_codec.h  nrf_cloud_rest.h  wifi_provision.h
lib/: CMakeLists.txt  Kconfig
lib/lte_link_control/: Kconfig  lte_lc.c  lte_lc_modem_hooks.c
lib/modem_info/: Kconfig  modem_info.c
lib/nrf_modem_lib/: CMakeLists.txt  Kconfig  Kconfig.modemlib  nrf91_sockets.c
lib/nrf_modem_lib/nrf91_connectivity/: CMakeLists.txt  Kconfig  ip_addr_helper.c  ip_addr_helper.h  nrf91_connectivity.c  nrf91_connectivity.h  nrf91_ip_addr_helper.c  nrf91_ip_addr_helper.h
lib/pdn/: Kconfig  pdn.c
lib/qos/: CMakeLists.txt  Kconfig  qos.c
samples/matter/light_bulb/: CMakeLists.txt  overlay-aws-iot-integration.conf  prj.conf
samples/net/aws_iot/: Kconfig.sysbuild  prj.conf  sample.yaml
samples/net/download/: sample.yaml
samples/net/http_server/: README.rst  overlay-tls-nrf7002dk.conf  prj.conf
samples/net/https_client/: sample.yaml
samples/net/mqtt/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/net/mqtt/boards/: native_posix.conf  nrf7002dk_nrf5340_cpuapp.conf  nrf9160dk_nrf9160_ns.conf  thingy91_nrf9160_ns.conf
samples/net/mqtt/doc/: architecture.rst  description.rst  provisioning.rst
samples/net/mqtt/src/: main.c
samples/net/mqtt/src/common/: message_channel.c  message_channel.h
samples/net/mqtt/src/modules/encoder/: CMakeLists.txt  Kconfig.encoder  encoder.c
samples/net/mqtt/src/modules/encoder/protobuf/: simple.options  simple.proto
samples/net/mqtt/src/modules/network/: CMakeLists.txt  Kconfig.network  network.c  network_lte.c
samples/net/mqtt/src/modules/sampler/: CMakeLists.txt  Kconfig.sampler  sampler.c
samples/net/mqtt/src/modules/timer/: CMakeLists.txt  Kconfig.timer  timer.c
samples/net/mqtt/src/modules/transport/: CMakeLists.txt  Kconfig.transport  transport.c
samples/net/mqtt/src/modules/transport/credentials_provision/: credentials_provision.c
samples/net/mqtt/src/modules/trigger/: Kconfig.trigger  trigger.c
samples/net/udp/: prj.conf
samples/nrf9160/aws_iot/: prj.conf
samples/nrf9160/aws_iot_provisioning/: CMakeLists.txt  Kconfig  README.md  overlay-native_tls.conf  prj.conf
samples/nrf9160/azure_fota/: README.rst  prj.conf
samples/nrf9160/azure_iot_hub/: README.rst
samples/nrf9160/customer/: CMakeLists.txt  CMakeLists.txt:Zone.Identifier  prj.conf
samples/nrf9160/customer/src/: UART.c  UART.h  aws.c  aws.h  cli.c  cli.h  cloud.c  cloud.h  https.c  https.h  main.c  modem.c  modem.h  scheduler.c  scheduler.h  software_settings.h  watch.c  watch.h
samples/nrf9160/fmfu_smp_svr/: prj.conf
samples/nrf9160/lwm2m_client/: prj.conf  sample_description.rst
samples/nrf9160/memfault/: prj.conf
samples/nrf9160/modem_shell/: overlay-modem-trace.conf
samples/nrf9160/mqtt_simple/: README.rst
samples/nrf9160/nrf_cloud_coap_client/: CMakeLists.txt  Kconfig  README.rst  overlay-debug.conf  overlay-offload-tls.conf  prj.conf
samples/nrf9160/nrf_cloud_rest_device_message/: prj.conf
samples/nrf9160/nrf_cloud_rest_fota/: prj.conf
samples/nrf9160/udp/: CMakeLists.txt  prj.conf
samples/nrf9160/udp/child_image/: spm.conf
samples/nrf9160/udp/src/: main.c
samples/nrf9160/xcountrydata/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/wifi/wifi_provision/: Kconfig  README.rst  prj.conf
scripts/: quarantine.yaml
subsys/bluetooth/controller/: hci_driver.c
subsys/net/l2_wifi_if_conn/: CMakeLists.txt  Kconfig  l2_wifi_conn.c
subsys/net/lib/: CMakeLists.txt  Kconfig  Kconfig.cloud_choice
subsys/zigbee/: Kconfig
sysbuild/: CMakeLists.txt
tests/lib/qos/: CMakeLists.txt  prj.conf
tests/nrf5340_audio/max14690/: main.c
tests/subsys/net/lib/wifi_provision/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/subsys/net/lib/wifi_provision/src/: wifi_provision_test.c
(+211 files in other folders)
